# beets-originquery-ng

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/beetsplug/beets_originquery/: originquery.py
src/beetsplug/originquery/: __init__.py  plugin.py
tests/: conftest.py  test_originquery.py
