[project]
name = "beets-originquery-ng"
version = "1.0.2"
description = "Use origin files to enrich beets importer search criteria"
readme = "README.md"
authors = [
    { name = "x1ppy" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beets>=2.5.1",
    "confuse>=2.1.0",
    "jsonpath-rw>=1.4.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "beetsplug.originquery"

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PIE", "PT", "RUF"]

[tool.ruff.format]
docstring-code-format = true
