[project]
name = "beets-originquery-ng"
version = "2.3.0"
description = "Use origin files to enrich beets importer search criteria"
readme = "README.md"
authors = [
    { name = "x1ppy" },
    { name = "libussa" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beets>=2.5.1",
    "confuse",
    "jsonpath-rw",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/libussa/beets-originquery-ng"
Repository = "https://github.com/libussa/beets-originquery-ng"
Issues = "https://github.com/libussa/beets-originquery-ng/issues"
Releases = "https://github.com/libussa/beets-originquery-ng/releases"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "beetsplug.originquery"

[dependency-groups]
dev = [
    "prek",
    "pytest",
    "ruff",
    "twine",
    "ty",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PIE", "PT", "RUF"]

[tool.ruff.format]
docstring-code-format = true
